Fixed radio button spacing.

--- a/src/assets/sass/patterns/_permit-select.scss
+++ b/src/assets/sass/patterns/_permit-select.scss
@@ -9,6 +9,7 @@ label.permit-item {
   width: 100%;
 
   .permit-name {
+    min-height: 50px;
     float: left;
     width: 66.66667%;
 
